# UM-crossy-toad

./: 2022li1g009.cabal  INSTALLATION.md  README.md  TODO.md
doc/html/: LI12223.html  Main.html  Tarefa1_2022li1g009.html  Tarefa2_2022li1g009.html  Tarefa3_2022li1g009.html  Tarefa4_2022li1g009.html  Tarefa5_2022li1g009.html  doc-index.html  haskell.css  index.html
src/: Main.hs  Tarefa1_2022li1g009.hs  Tarefa2_2022li1g009.hs  Tarefa3_2022li1g009.hs  Tarefa4_2022li1g009.hs  Tarefa5_2022li1g009.hs
tests/: Spec.hs  Tarefa1_2022li1g009_Spec.hs  Tarefa2_2022li1g009_Spec.hs  Tarefa3_2022li1g009_Spec.hs  Tarefa4_2022li1g009_Spec.hs  Tarefa5_2022li1g009_Spec.hs
